--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ android {
 
 dependencies {
 
+    def lottieVersion = "3.4.0"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -54,5 +56,10 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
+    //Lottie Animations
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+
 
 }
